@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.38 [20140117] [svn: r545]
+Changelog for sg3_utils-1.38 [20140121] [svn: r546]
   - sg_ses: add --dev-slot-num= and --sas-addr=
     - fix --data=- problem with large buffers
     - new --data=@FN to read hex data from file FN
@@ -27,6 +27,7 @@ Changelog for sg3_utils-1.38 [20140117] [svn: r545]
   - sg_write_same: repeat if unit attention
   - sg_rtpg: fix indexing bug with --extended option
   - sg_lib_data: sync asc/ascq codes with T10 dated 20131110
+  - sg_cmds_extra: fix sa bug in sg_ll_3party_copy_out()
   - examples: add sg_tst_excl3 for testing O_EXCL
     - improve sg_tst_excl and sg_tst_excl2
     - add sg_tst_context for testing file handle contexts
